--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-synthesis: none;
-  font-weight: 400;
-  line-height: 1.5;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+@import "tailwindcss";
+
+body {
+  font-family: 'Nunito', sans-serif;
 }
